fix: home icon alignment

--- a/src/app/components/header/header.module.css
+++ b/src/app/components/header/header.module.css
@@ -13,16 +13,26 @@
   transition: all ease 0.1s;
 }
 
-.home_icon {
+.home_icon_link {
   position: absolute;
   top: 0px;
   left: 0px;
   width: var(--header-height);
   height: var(--header-height);
+  max-height: var(--header-height);
+  overflow: clip;
+}
+
+.home_icon {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  color: var(--primary-contrast);
+  text-decoration: none;
   font-size: 50px;
+  padding-bottom: 4px;
 }
 
 .title {
